attempted collapsability and fixed maps

--- a/style.css
+++ b/style.css
@@ -98,6 +98,9 @@ body {
 
   /* text */
   color: black;
+
+  /* collapsible effect */
+  overflow: hidden;
 }
 
 .panel cover {
